<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="gui1">Laboration 1.1</string>
    <string name="gui2">Laboration 1.2</string>
    <string name="gui3">Laboration 1.3</string>
    <string name="button">KNAPP</string>
    <string name="textField_ML">ett textfält som \nklarar \nav \nflera rader \noch använder det skärmutrymme som \n\nfinns</string>
    <string name="textField">Textfält</string>
    <string name="name">Namn</string>
    <string name="password">Lösenord</string>
    <string name="email">Epost</string>
    <string name="age">Ålder</string>
    <string name="question1">Hur trivs du på LiU?</string>
    <string name="question2">Läser du på LiTH?</string>
    <string name="question3">Är detta LiUs logotyp?</string>
    <string name="well">Bra</string>
    <string name="veryWell">Mycket bra</string>
    <string name="extremelyWell">Jättebra</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="send">Skicka in</string>
    <string name="title_activity_test">test</string>
    <string name="hello_world">Hello world!</string>

</resources>
