<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lab1_3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question1"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/well"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veryWell"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extremelyWell"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@+id/checkBox2"
        android:layout_toEndOf="@+id/checkBox2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question2"
        android:id="@+id/textView2"
        android:layout_below="@+id/checkBox2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:enabled="false"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/checkBox6"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/checkBox7"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/checkBox6"
        android:layout_toEndOf="@+id/checkBox6"/>

    <ImageView
        android:layout_width="@dimen/imgSize"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/checkBox7"
        android:layout_centerHorizontal="true"
        android:src="@drawable/liu_logga"
        android:adjustViewBounds="true"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/question3"
        android:id="@+id/textView3"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:enabled="false"
        android:layout_marginTop="@dimen/vert_marg" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/checkBox8"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/checkBox9"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/checkBox"
        android:layout_toEndOf="@+id/checkBox" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/button"
        android:layout_below="@+id/checkBox9"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
