<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lab1_2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textName"
        android:layout_marginTop="@dimen/text_marg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:enabled="false"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Emma"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_toEndOf="@+id/textName"
        android:layout_alignLeft="@+id/editPW"
        android:layout_alignStart="@+id/editPW"
        android:layout_alignBaseline="@+id/textName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:id="@+id/textPW"
        android:layout_below="@+id/textName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/text_marg"
        android:enabled="false"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPW"
        android:layout_toRightOf="@+id/textPW"
        android:layout_toEndOf="@+id/textPW"
        android:text="password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_alignBaseline="@+id/textPW" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textMail"
        android:layout_below="@+id/textPW"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/text_marg"
        android:text="@string/email"
        android:enabled="false"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editEmail"
        android:layout_toEndOf="@+id/textAge"
        android:text="emmed608@student.liu.se"
        android:layout_alignLeft="@+id/editPW"
        android:layout_alignStart="@+id/editPW"
        android:layout_alignBaseline="@+id/textMail" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/textAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textMail"
        android:layout_marginTop="@dimen/text_marg"
        android:enabled="false"/>

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBarAge"
        android:layout_toEndOf="@+id/textPW"
        android:layout_alignTop="@+id/textAge"
        android:indeterminate="false"
        android:layout_alignLeft="@+id/editEmail"
        android:layout_alignStart="@id/editPW"
        android:max="100"
        android:progress="25" />

</RelativeLayout>
